--- a/app/views/surveys/_survey_form.html.erb
+++ b/app/views/surveys/_survey_form.html.erb
@@ -1,7 +1,19 @@
 <%= form_for @survey do |f| %>
-  <div class="form-group">
-    <%= f.text_field :title, class: "form-control" %>
-    <%= f.text_area :description, class: "form-control" %>
-    <%= f.submit class: "btn btn-primary" %>
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+
+      <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: "form-control" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :description %>
+        <%= f.text_area :description, class: "form-control" %>
+      </div>
+
+      <%= f.submit class: "btn btn-primary" %>
+
+    </div>
   </div>
 <% end %>
