--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,7 +1,9 @@
 <h1>All Surveys!</h1>
 
 <% @surveys.each do |survey| %>
-
-  <%= link_to survey.title, survey %><br>
-
+<h4><%= link_to survey.title, survey %></h4>
+<ul>
+  <li><%= link_to "Edit the Survey", edit_survey_path(survey) %></li>
+  <li><%= link_to "Delete the Survey", surveys_path(survey), method: :delete %></li>
+</ul>
 <% end %>
