--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "Add Number Range Question", new_survey_number_range_question_path(@survey) %>
+<%= render :partial => "survey_form", locals: { survey: @survey } %>
