--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,1 +1,4 @@
 <%= render :partial => "survey_form", locals: { survey: @survey } %>
+
+<%= link_to "Add Number Range Question", new_survey_number_range_question_path(@survey) %>
+<%= link_to "Add Multiple Choice Question", new_survey_multiple_choice_question_path(@survey) %>
