--- a/app/views/number_range_questions/new.html.erb
+++ b/app/views/number_range_questions/new.html.erb
@@ -1,14 +1,20 @@
-<h1><%= @survey.title %></h1>
-<p>
-  <%= @survey.description %>
-</p>
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
 
-<h4>Current Questions</h4>
-<ul>
-  <% @survey.number_range_questions.each do |question| %>
-    <li><%= question.title %></li>
-  <% end %>
-</ul>
+    <h1><%= @survey.title %></h1>
+    <p>
+      <%= @survey.description %>
+    </p>
+
+    <h4>Current Questions</h4>
+    <ul>
+      <% @survey.number_range_questions.each do |question| %>
+        <li><%= question.title %></li>
+      <% end %>
+    </ul>
+
+  </div>
+</div>
 
 <%= form_for [@survey, @question] do |f| %>
   <div class="row">
