--- a/app/assets/stylesheets/surveys.scss
+++ b/app/assets/stylesheets/surveys.scss
@@ -6,3 +6,16 @@ input[type=range] {
   display: inline;
   width: 95%;
 }
+
+.errors {
+  color: red;
+}
+
+.required {
+  color: red;
+  font-size: 20px;
+}
+
+.count {
+  font-weight: bold;
+}
